--- a/.github/workflows/side-projects.yaml
+++ b/.github/workflows/side-projects.yaml
@@ -11,11 +11,20 @@ concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
 
+env:
+  VAGRANT_ORG: PKUHPC
+  VAGRANT_REPO: scow-vagrant
+
 jobs:
+
   openscow-vagrant:
-    name: Update openscow-vagrant
+    name: Update openscow-vagrant if not from fork
     runs-on: ubuntu-latest
+
+    if: github.event.pull_request.head.repo.fork == false
+
     steps:
+
       - uses: actions/checkout@v4
 
       - name: Create version file for tag commit
@@ -25,10 +34,10 @@ jobs:
           FILE_NAME: "./deploy/vagrant/VERSION"
           FILE_DATA: "${{ github.ref_name }}"
 
-      - name: Pushes to PKUHPC/scow-vagrant repo
+      - name: Pushes to ${{ env.VAGRANT_ORG }}/${{ env.VAGRANT_REPO }} repo
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           token: ${{ secrets.SCOW_DEPLOYMENT_PAT }}
           folder: ./deploy/vagrant
-          repository-name: PKUHPC/scow-vagrant
+          repository-name: ${{ env.VAGRANT_ORG }}/${{ env.VAGRANT_REPO }}
           branch: ${{ github.ref_type == 'branch' && github.ref_name || 'master' }}
