--- a/package.json
+++ b/package.json
@@ -50,8 +50,7 @@
     "tsc-alias": "1.8.10",
     "tsconfig-paths": "4.2.0",
     "turbo": "2.0.4",
-    "typescript": "5.5.2",
-    "eslint-plugin-license-header": "0.6.1"
+    "typescript": "5.5.2"
   },
   "volta": {
     "node": "20.15.0"
