feat: 调用适配器添加 ssl 校验 (#64)

--- a/apps/mis-server/package.json
+++ b/apps/mis-server/package.json
@@ -23,10 +23,11 @@
   "license": "Mulan PSL v2",
   "repository": "https://github.com/PKUHPC/SCOW",
   "dependencies": {
+    "@bufbuild/protobuf": "1.8.0",
+    "@ddadaal/tsgrpc-client": "0.17.7",
     "@ddadaal/tsgrpc-common": "0.2.5",
     "@ddadaal/tsgrpc-server": "0.19.6",
-    "@ddadaal/tsgrpc-client": "0.17.7",
-    "@grpc/grpc-js": "1.10.9",
+    "@grpc/grpc-js": "1.12.2",
     "@mikro-orm/cli": "6.3.13",
     "@mikro-orm/core": "6.3.13",
     "@mikro-orm/mariadb": "6.3.13",
@@ -38,15 +39,15 @@
     "@scow/lib-config": "workspace:*",
     "@scow/lib-decimal": "workspace:*",
     "@scow/lib-hook": "workspace:*",
-    "@scow/lib-scow-resource": "workspace:*",
+    "@scow/lib-notification": "workspace:*",
     "@scow/lib-scheduler-adapter": "workspace:*",
+    "@scow/lib-scow-resource": "workspace:*",
     "@scow/lib-server": "workspace:*",
     "@scow/lib-ssh": "workspace:*",
-    "@scow/protos": "workspace:*",
-    "@scow/scow-resource-protos": "workspace:*",
-    "@scow/scheduler-adapter-protos": "workspace:*",
-    "@scow/lib-notification": "workspace:*",
     "@scow/notification-protos": "workspace:*",
+    "@scow/protos": "workspace:*",
+    "@scow/scheduler-adapter-protos": "workspace:*",
+    "@scow/scow-resource-protos": "workspace:*",
     "@scow/utils": "workspace:*",
     "@sinclair/typebox": "0.32.34",
     "dayjs": "1.11.11",
@@ -55,8 +56,7 @@
     "pino": "9.3.2",
     "pino-pretty": "10.3.1",
     "uuid": "10.0.0",
-    "wait-on": "8.0.0",
-    "@bufbuild/protobuf": "1.8.0"
+    "wait-on": "8.0.0"
   },
   "devDependencies": {
     "@types/google-protobuf": "3.15.12",
