--- a/apps/resource/package.json
+++ b/apps/resource/package.json
@@ -26,36 +26,36 @@
     "@ant-design/cssinjs": "1.21.0",
     "@ant-design/icons": "5.4.0",
     "@bufbuild/protobuf": "1.8.0",
-    "@connectrpc/connect-next": "1.4.0",
     "@connectrpc/connect": "1.4.0",
+    "@connectrpc/connect-next": "1.4.0",
     "@connectrpc/connect-web": "1.4.0",
     "@connectrpc/protoc-gen-connect-es": "1.4.0",
     "@ddadaal/tsgrpc-client": "0.17.7",
     "@ddadaal/tsgrpc-common": "0.2.5",
     "@ddadaal/tsgrpc-server": "0.19.6",
-    "@grpc/grpc-js": "1.10.9",
+    "@grpc/grpc-js": "1.12.2",
     "@mikro-orm/core": "6.3.13",
     "@mikro-orm/migrations": "6.3.13",
     "@mikro-orm/mysql": "6.3.13",
     "@mikro-orm/seeder": "6.3.13",
+    "@scow/config": "workspace:*",
     "@scow/lib-config": "workspace:*",
     "@scow/lib-decimal": "workspace:*",
     "@scow/lib-scheduler-adapter": "workspace:*",
-    "@scow/lib-web": "workspace:*",
-    "@scow/utils": "workspace:*",
-    "@scow/config": "workspace:*",
     "@scow/lib-server": "workspace:*",
+    "@scow/lib-web": "workspace:*",
     "@scow/protos": "workspace:*",
     "@scow/scow-resource-protos": "workspace:*",
+    "@scow/utils": "workspace:*",
     "@sinclair/typebox": "0.32.34",
     "@tanstack/react-query": "4.36.1",
     "@trpc/client": "10.45.2",
+    "@trpc/next": "10.45.2",
     "@trpc/react-query": "10.45.2",
     "@trpc/server": "10.45.2",
-    "@trpc/next": "10.45.2",
-    "antd": "5.19.4",
     "ajv": "8.13.0",
     "ajv-formats": "3.0.1",
+    "antd": "5.19.4",
     "js-yaml": "4.1.0",
     "long": "5.2.3",
     "next": "14.2.4",
@@ -67,17 +67,17 @@
     "protobufjs": "7.2.6",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "replace-in-file": "8.1.0",
     "styled-components": "6.1.12",
     "superjson": "2.2.1",
     "swagger-ui-react": "5.17.14",
     "trpc-openapi": "1.2.0",
-    "zod": "3.23.6",
-    "replace-in-file": "8.1.0"
+    "zod": "3.23.6"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "14.2.4",
     "@bufbuild/buf": "1.30.1",
     "@mikro-orm/cli": "6.3.13",
+    "@next/bundle-analyzer": "14.2.4",
     "@types/js-yaml": "4.0.9",
     "@types/node": "20.14.8",
     "@types/react": "18.3.3",
