--- a/libs/web/package.json
+++ b/libs/web/package.json
@@ -16,41 +16,41 @@
     "!**/*.map"
   ],
   "dependencies": {
+    "@ddadaal/tsgrpc-client": "0.17.7",
+    "@grpc/grpc-js": "1.12.2",
+    "@scow/config": "workspace:*",
+    "@scow/protos": "workspace:*",
     "@scow/utils": "workspace:*",
-    "zod": "3.23.8",
     "mime-types": "2.1.35",
     "nookies": "2.5.2",
-    "@ddadaal/tsgrpc-client": "0.17.7",
-    "@scow/protos": "workspace:*",
-    "@scow/config": "workspace:*",
-    "@grpc/grpc-js": "1.10.9"
+    "zod": "3.23.8"
   },
   "peerDependencies": {
-    "antd": "5.18.3",
-    "next": "14.2.4",
-    "styled-components": "6.1.11",
+    "@ant-design/cssinjs": "1.21.0",
     "@ant-design/icons": "5.3.7",
+    "antd": "5.18.3",
     "dayjs": "1.11.11",
+    "next": "14.2.4",
+    "nookies": "2.5.2",
     "react": ">=18.2.0",
+    "react-async": "10.0.1",
     "react-dom": ">=18.2.0",
     "react-is": "18.3.1",
-    "nookies": "2.5.2",
-    "@ant-design/cssinjs": "1.21.0",
-    "react-async": "10.0.1"
+    "styled-components": "6.1.11"
   },
   "devDependencies": {
-    "antd": "5.18.3",
-    "next": "14.2.4",
-    "styled-components": "6.1.11",
-    "@types/mime-types": "2.1.4",
-    "react": "18.3.1",
-    "@types/react": "18.3.3",
-    "react-dom": "18.3.1",
-    "@types/react-dom": "18.3.0",
-    "react-is": "18.3.1",
     "@ant-design/icons": "5.3.7",
+    "@types/mime-types": "2.1.4",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@types/styled-components": "5.1.34",
+    "antd": "5.18.3",
     "dayjs": "1.11.11",
-    "@types/styled-components": "5.1.34"
+    "next": "14.2.4",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-is": "18.3.1",
+    "styled-components": "6.1.11"
   },
   "author": "PKUHPC (https://github.com/PKUHPC)",
   "license": "Mulan PSL v2",
