--- a/apps/ai/package.json
+++ b/apps/ai/package.json
@@ -37,30 +37,33 @@
     "@ant-design/icons": "5.3.7",
     "@ddadaal/tsgrpc-client": "0.17.7",
     "@ddadaal/tsgrpc-common": "0.2.5",
-    "@grpc/grpc-js": "1.10.9",
+    "@grpc/grpc-js": "1.12.2",
     "@kubernetes/client-node": "^0.21.0",
     "@mikro-orm/cli": "6.3.13",
     "@mikro-orm/core": "6.3.13",
     "@mikro-orm/migrations": "6.3.13",
     "@mikro-orm/mysql": "6.3.13",
     "@mikro-orm/seeder": "6.3.13",
+    "@scow/ai-scheduler-adapter-protos": "workspace:*",
     "@scow/config": "workspace:*",
     "@scow/lib-auth": "workspace:*",
     "@scow/lib-config": "workspace:*",
     "@scow/lib-decimal": "workspace:*",
     "@scow/lib-operation-log": "workspace:*",
+    "@scow/lib-scheduler-adapter": "workspace:*",
     "@scow/lib-server": "workspace:*",
     "@scow/lib-ssh": "workspace:*",
     "@scow/lib-web": "workspace:*",
-    "@scow/ai-scheduler-adapter-protos": "workspace:*",
-    "@scow/utils": "workspace:*",
     "@scow/rich-error-model": "workspace:*",
+    "@scow/utils": "workspace:*",
     "@sinclair/typebox": "0.32.34",
     "@tanstack/react-query": "4.36.1",
     "@trpc/client": "10.45.2",
     "@trpc/next": "10.45.2",
     "@trpc/react-query": "10.45.2",
     "@trpc/server": "10.45.2",
+    "@xterm/addon-fit": "0.10.0",
+    "@xterm/xterm": "5.5.0",
     "antd": "5.18.3",
     "dayjs": "1.11.11",
     "dotenv": "16.4.5",
@@ -82,17 +85,15 @@
     "react-dom": "18.3.1",
     "react-is": "18.3.1",
     "react-typed-i18n": "2.3.0",
+    "replace-in-file": "8.1.0",
+    "shell-quote": "1.8.1",
     "simstate": "3.0.1",
     "styled-components": "6.1.11",
     "superjson": "2.2.1",
     "swagger-ui-react": "5.17.14",
     "trpc-openapi": "1.2.0",
     "ws": "8.17.1",
-    "@xterm/xterm": "5.5.0",
-    "@xterm/addon-fit": "0.10.0",
-    "zod": "3.23.8",
-    "shell-quote": "1.8.1",
-    "replace-in-file": "8.1.0"
+    "zod": "3.23.8"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "14.2.4",
@@ -106,12 +107,12 @@
     "@types/nprogress": "0.2.3",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
+    "@types/shell-quote": "1.7.5",
+    "@types/ssh2": "1.15.0",
     "@types/styled-components": "5.1.34",
     "@types/swagger-ui-react": "4.18.3",
     "@types/url-join": "4.0.3",
     "@types/ws": "8.5.10",
-    "@types/shell-quote": "1.7.5",
-    "@types/ssh2": "1.15.0",
     "fs-extra": "11.2.0",
     "jest-environment-jsdom": "29.7.0",
     "nextjs-node-loader": "1.1.5",
