--- a/apps/ai/package.json
+++ b/apps/ai/package.json
@@ -50,6 +50,7 @@
     "@scow/lib-config": "workspace:*",
     "@scow/lib-decimal": "workspace:*",
     "@scow/lib-operation-log": "workspace:*",
+    "@scow/lib-scow-resource": "workspace:*",
     "@scow/lib-scheduler-adapter": "workspace:*",
     "@scow/lib-server": "workspace:*",
     "@scow/lib-ssh": "workspace:*",
