fix: Rich Error Model (#72)
* ready for rich error model

* fix

* update

--- a/libs/protos/ai-scheduler-adapter/buf.gen.yaml
+++ b/libs/protos/ai-scheduler-adapter/buf.gen.yaml
@@ -11,3 +11,4 @@ plugins:
       - esModuleInterop=true
       - useOptionals=messages
       - outputServices=grpc-js
+      - outputTypeAnnotations=static-only
