--- a/libs/protos/scow-resource/buf.gen.yaml
+++ b/libs/protos/scow-resource/buf.gen.yaml
@@ -18,4 +18,5 @@ plugins:
       - esModuleInterop=true
       - useOptionals=messages
       - outputServices=grpc-js
+      - outputTypeAnnotations=static-only
 
