--- a/libs/protos/scow/buf.gen.yaml
+++ b/libs/protos/scow/buf.gen.yaml
@@ -12,3 +12,5 @@ plugins:
       - esModuleInterop=true
       - useOptionals=messages
       - outputServices=grpc-js
+      - outputTypeAnnotations=static-only
+
