--- a/libs/protos/scheduler-adapter/buf.gen.yaml
+++ b/libs/protos/scheduler-adapter/buf.gen.yaml
@@ -11,3 +11,4 @@ plugins:
       - esModuleInterop=true
       - useOptionals=messages
       - outputServices=grpc-js
+      - outputTypeAnnotations=static-only
