feat(resource): 增加账户授权集群的Hook (#86)
* add hook

--- a/apps/resource/package.json
+++ b/apps/resource/package.json
@@ -41,6 +41,7 @@
     "@scow/config": "workspace:*",
     "@scow/lib-config": "workspace:*",
     "@scow/lib-decimal": "workspace:*",
+    "@scow/lib-hook": "workspace:*",
     "@scow/lib-scheduler-adapter": "workspace:*",
     "@scow/lib-server": "workspace:*",
     "@scow/lib-web": "workspace:*",
