--- a/apps/ai/package.json
+++ b/apps/ai/package.json
@@ -34,6 +34,7 @@
   },
   "dependencies": {
     "@ant-design/cssinjs": "1.21.0",
+    "@ant-design/colors": "7.0.2",
     "@ant-design/icons": "5.3.7",
     "@ddadaal/tsgrpc-client": "0.17.7",
     "@ddadaal/tsgrpc-common": "0.2.5",
@@ -48,6 +49,7 @@
     "@scow/config": "workspace:*",
     "@scow/lib-auth": "workspace:*",
     "@scow/lib-config": "workspace:*",
+    "@scow/protos": "workspace:*",
     "@scow/lib-decimal": "workspace:*",
     "@scow/lib-operation-log": "workspace:*",
     "@scow/lib-scow-resource": "workspace:*",
@@ -94,7 +96,8 @@
     "swagger-ui-react": "5.17.14",
     "trpc-openapi": "1.2.0",
     "ws": "8.17.1",
-    "zod": "3.23.8"
+    "zod": "3.23.8",
+    "recharts": "2.12.7"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "14.2.4",
