--- a/dev/docker-compose.dev.yml
+++ b/dev/docker-compose.dev.yml
@@ -12,7 +12,7 @@ version: "3"
 
 services:
   db:
-    image: mysql:8
+    image: ccimage.pku.edu.cn/mirror/library/mysql:8
     environment:
       MYSQL_ROOT_PASSWORD: ${MYSQL_ROOT_PASSWORD}
     volumes:
@@ -21,7 +21,7 @@ services:
       - 3306:3306
 
   redis:
-    image: redis:alpine
+    image: ccimage.pku.edu.cn/mirror/library/redis:alpine
     ports:
       - 6379:6379
 
@@ -59,7 +59,7 @@ services:
         hard: 10240
 
   ldapadmin:
-    image: osixia/phpldapadmin
+    image: ccimage.pku.edu.cn/mirror/osixia/phpldapadmin
     ports:
       - 3890:80
     environment:
