--- a/.github/workflows/test-build-publish.yaml
+++ b/.github/workflows/test-build-publish.yaml
@@ -72,10 +72,17 @@ jobs:
         if: vars.RUN_TESTS == 'true'
         run: ssh-keygen -t rsa -f "$HOME/.ssh/id_rsa" -N ""
 
+      - name: Log in to the ${{ env.INTERNAL_CR }}
+        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567
+        with:
+          registry: ${{ env.INTERNAL_CR }}
+          username: ${{ secrets.CCIMAGE_USERNAME }}
+          password: ${{ secrets.CCIMAGE_PASSWORD }}
+
       - name: Start dev env for db testing
         if: vars.RUN_TESTS == 'true'
         run: |
-          SSH_AUTHORIZED_PUBLIC_KEY="$(cat $HOME/.ssh/id_rsa.pub)" pnpm devenv
+          SSH_AUTHORIZED_PUBLIC_KEY="$(cat $HOME/.ssh/id_rsa.pub)" pnpm devenv --build
 
       - name: Check running containers
         if: vars.RUN_TESTS == 'true'
@@ -172,8 +179,17 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Log in to the ${{ env.INTERNAL_CR }}
+        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567
+        with:
+          registry: ${{ env.INTERNAL_CR }}
+          username: ${{ secrets.CCIMAGE_USERNAME }}
+          password: ${{ secrets.CCIMAGE_PASSWORD }}
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
+        with:
+          image: ${{ env.INTERNAL_CR }}/mirror/tonistiigi/binfmt:latest
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -181,13 +197,7 @@ jobs:
           driver-opts: |
             env.http_proxy=${{ vars.HTTPS_PROXY }}
             env.https_proxy=${{ vars.HTTPS_PROXY }}
-
-      - name: Log in to the ${{ env.INTERNAL_CR }}
-        uses: docker/login-action@9780b0c442fbb1117ed29e0efdff1e18412f7567
-        with:
-          registry: ${{ env.INTERNAL_CR }}
-          username: ${{ secrets.CCIMAGE_USERNAME }}
-          password: ${{ secrets.CCIMAGE_PASSWORD }}
+            image=ccimage.pku.edu.cn/mirror/moby/buildkit:buildx-stable-1
 
       - name: Docker meta
         id: meta
