feat: 在SCOW的light mode和dark mode下，可以选择两种不同的主题色 (#110)
* 门户系统增加主题色

* 管理系统、消息系统、ai、resource增加主题色

* feat: 添加配置文档

* 增加init-full配置示例

* fix

--- a/dev/vagrant/config/ui.yaml
+++ b/dev/vagrant/config/ui.yaml
@@ -11,11 +11,14 @@ footer:
     # a.com: a.com的文本
 
 # 主题色配置。可以不填
-# 对portal-web和mis-web有效
+# 对portal-web、mis-web、消息系统有效
 primaryColor:
 
   # 对所有域名生效的主题色。默认为#94070A
   defaultColor: "#94070A"
+
+  # 对所有域名在暗色模式下生效的主题色。默认等于defaultColor，可以不填
+  # darkModeColor: "#94070A"
 
   # 对具体hostname生效的生效，可以不填
   # hostnameMap:
