--- a/apps/cli/assets/init-full/config/ui.yaml
+++ b/apps/cli/assets/init-full/config/ui.yaml
@@ -17,6 +17,9 @@ primaryColor:
   # 对所有域名生效的主题色。默认为#94070A
   defaultColor: "#94070A"
 
+  # 对所有域名在暗色模式下生效的主题色。默认等于defaultColor，可以不填
+  # darkModeColor: "#94070A"
+
   # 对具体hostname生效的生效，可以不填
   # hostnameMap:
     # 从a.com的访问的主题色为#000000
