feat(ai): AI 添加文件编辑功能 (#126)

--- a/apps/ai/package.json
+++ b/apps/ai/package.json
@@ -17,12 +17,13 @@
     "dev:server": "cross-env NEXT_PUBLIC_USE_MOCK=0 next dev",
     "serve": "node start.mjs",
     "serve:next": "next start",
-    "build": "npm run build:next",
+    "build": "node scripts/copyMonacoToPublic.js && npm run build:next",
     "build:next": "rimraf .next.backup && cross-env BUILDING=1 NEXT_PUBLIC_BASE_PATH=/@BASE_PATH@ next build --no-mangling",
     "build:ts": "rimraf build && tsc -p tsconfig.server.json && tsc-alias -p tsconfig.server.json",
     "orm": "dotenv -e env/.env.dev -- npx mikro-orm",
     "ormCreate": "dotenv -e env/.env.dev -- npx mikro-orm migration:create",
     "ormUp": "dotenv -e env/.env.dev -- npx mikro-orm migration:up",
+    "prepareDev": "node scripts/copyMonacoToPublic.js",
     "lint": "eslint ."
   },
   "mikro-orm": {
@@ -97,7 +98,8 @@
     "trpc-openapi": "1.2.0",
     "ws": "8.17.1",
     "zod": "3.23.8",
-    "recharts": "2.12.7"
+    "recharts": "2.12.7",
+    "@monaco-editor/react": "4.6.0"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "14.2.4",
@@ -124,6 +126,9 @@
     "postcss": "8.4.38",
     "ts-log": "2.2.5",
     "webpack": "5.92.1"
+  },
+  "peerDependencies": {
+    "monaco-editor": "0.44.0"
   },
   "volta": {
     "extends": "../../package.json"
