fix: 修复缺少 auth 鉴权问题 (#152)

--- a/libs/notification/package.json
+++ b/libs/notification/package.json
@@ -19,6 +19,7 @@
     "@connectrpc/connect": "1.4.0",
     "@connectrpc/connect-node": "1.4.0",
     "@grpc/grpc-js": "1.12.2",
-    "@scow/notification-protos": "workspace:*"
+    "@scow/notification-protos": "workspace:*",
+    "@scow/config": "workspace:*"
   }
 }
