--- a/apps/notification/package.json
+++ b/apps/notification/package.json
@@ -45,6 +45,7 @@
     "@scow/lib-notification": "workspace:*",
     "@scow/lib-scheduler-adapter": "workspace:*",
     "@scow/lib-web": "workspace:*",
+    "@scow/lib-server": "workspace:*",
     "@scow/notification-protos": "workspace:*",
     "@scow/protos": "workspace:*",
     "@sinclair/typebox": "0.32.29",
