feat: gateway中ai和portal对text/stream的支持 (#166)
* feat: gateway对text/stream的支持

* fix

* fix: changeset

--- a/apps/gateway/assets/nginx.conf
+++ b/apps/gateway/assets/nginx.conf
@@ -1,3 +1,9 @@
+
+map $http_accept $proxy_accept_encoding {
+      default $http_accept;
+      "~*text/stream" "";
+}
+
 server {
 
   server_name ${ALLOWED_SERVER_NAME};
@@ -19,6 +25,7 @@ server {
     set $portal_path_url ${PORTAL_PATH_INTERNAL_URL};
     proxy_pass $portal_path_url;
 
+    proxy_set_header Accept-Encoding $proxy_accept_encoding;
     include includes/headers;
     include includes/websocket;
   }
@@ -34,6 +41,8 @@ server {
   location ${BASE_PATH}${AI_PATH} {
     set $ai_path_url ${AI_PATH_INTERNAL_URL};
     proxy_pass $ai_path_url;
+
+    proxy_set_header Accept-Encoding $proxy_accept_encoding;
 
     include includes/headers;
     include includes/websocket;
@@ -71,7 +80,7 @@ server {
 
     include includes/headers;
     include includes/websocket;
-  } 
+  }
 
   error_page   500 502 503 504  /50x.html;
 
@@ -87,3 +96,6 @@ server {
 }
 
 ${DEFAULT_SERVER_BLOCK}
+
+
+
