--- a/apps/portal-server/package.json
+++ b/apps/portal-server/package.json
@@ -21,11 +21,12 @@
   "license": "Mulan PSL v2",
   "repository": "https://github.com/PKUHPC/SCOW",
   "dependencies": {
-    "@connectrpc/connect": "1.4.0",
+    "@connectrpc/connect": "1.6.1",
+    "@bufbuild/protobuf": "1.10.0",
     "@ddadaal/tsgrpc-client": "0.17.8",
     "@ddadaal/tsgrpc-common": "0.2.6",
     "@ddadaal/tsgrpc-server": "0.19.6",
-    "@grpc/grpc-js": "1.12.2",
+    "@grpc/grpc-js": "1.12.5",
     "@scow/config": "workspace:*",
     "@scow/lib-config": "workspace:*",
     "@scow/lib-scheduler-adapter": "workspace:*",
@@ -38,24 +39,24 @@
     "@scow/scheduler-adapter-protos": "workspace:*",
     "@scow/scowd-protos": "workspace:*",
     "@scow/utils": "workspace:*",
-    "@sinclair/typebox": "0.32.34",
-    "dayjs": "1.11.11",
-    "dotenv": "16.4.5",
+    "@sinclair/typebox": "0.34.13",
+    "dayjs": "1.11.13",
+    "dotenv": "16.4.7",
     "node-cron": "3.0.3",
     "node-ssh": "13.2.0",
-    "pino": "9.3.2",
-    "pino-pretty": "10.3.1",
-    "shell-quote": "1.8.1",
-    "ts-log": "2.2.5",
-    "uuid": "10.0.0",
-    "wait-on": "8.0.0"
+    "pino": "9.6.0",
+    "pino-pretty": "13.0.0",
+    "shell-quote": "1.8.2",
+    "ts-log": "2.2.7",
+    "uuid": "11.0.5",
+    "wait-on": "8.0.2"
   },
   "devDependencies": {
     "@types/node-cron": "3.0.11",
     "@types/shell-quote": "1.7.5",
-    "@types/ssh2": "1.15.0",
+    "@types/ssh2": "1.15.4",
     "@types/wait-on": "5.3.4",
-    "form-data": "4.0.0"
+    "form-data": "4.0.1"
   },
   "volta": {
     "extends": "../../package.json"
