--- a/apps/resource/package.json
+++ b/apps/resource/package.json
@@ -23,21 +23,22 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@ant-design/cssinjs": "1.21.0",
-    "@ant-design/icons": "5.4.0",
-    "@bufbuild/protobuf": "1.8.0",
-    "@connectrpc/connect": "1.4.0",
-    "@connectrpc/connect-next": "1.4.0",
-    "@connectrpc/connect-web": "1.4.0",
-    "@connectrpc/protoc-gen-connect-es": "1.4.0",
-    "@ddadaal/tsgrpc-client": "0.17.7",
-    "@ddadaal/tsgrpc-common": "0.2.5",
+    "@ant-design/cssinjs": "1.22.1",
+    "@ant-design/icons": "5.5.2",
+    "@bufbuild/protobuf": "1.10.0",
+    "@connectrpc/connect-node": "1.6.1",
+    "@connectrpc/connect": "1.6.1",
+    "@connectrpc/connect-next": "1.6.1",
+    "@connectrpc/connect-web": "1.6.1",
+    "@connectrpc/protoc-gen-connect-es": "1.6.1",
+    "@ddadaal/tsgrpc-client": "0.17.8",
+    "@ddadaal/tsgrpc-common": "0.2.6",
     "@ddadaal/tsgrpc-server": "0.19.6",
-    "@grpc/grpc-js": "1.12.2",
-    "@mikro-orm/core": "6.3.13",
-    "@mikro-orm/migrations": "6.3.13",
-    "@mikro-orm/mysql": "6.3.13",
-    "@mikro-orm/seeder": "6.3.13",
+    "@grpc/grpc-js": "1.12.5",
+    "@mikro-orm/core": "6.4.3",
+    "@mikro-orm/migrations": "6.4.3",
+    "@mikro-orm/mysql": "6.4.3",
+    "@mikro-orm/seeder": "6.4.3",
     "@scow/config": "workspace:*",
     "@scow/lib-config": "workspace:*",
     "@scow/lib-decimal": "workspace:*",
@@ -48,52 +49,52 @@
     "@scow/protos": "workspace:*",
     "@scow/scow-resource-protos": "workspace:*",
     "@scow/utils": "workspace:*",
-    "@sinclair/typebox": "0.32.34",
+    "@sinclair/typebox": "0.34.13",
     "@tanstack/react-query": "4.36.1",
     "@trpc/client": "10.45.2",
     "@trpc/next": "10.45.2",
     "@trpc/react-query": "10.45.2",
     "@trpc/server": "10.45.2",
-    "ajv": "8.13.0",
+    "ajv": "8.17.1",
     "ajv-formats": "3.0.1",
     "antd": "5.19.4",
     "js-yaml": "4.1.0",
-    "long": "5.2.3",
+    "long": "5.2.4",
     "next": "14.2.4",
     "next-compose-plugins": "2.2.1",
     "next-connect": "1.0.0",
     "nextjs-cors": "2.2.0",
     "nookies": "2.5.2",
-    "pino": "9.1.0",
-    "protobufjs": "7.2.6",
+    "pino": "9.6.0",
+    "protobufjs": "7.4.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "replace-in-file": "8.1.0",
-    "styled-components": "6.1.12",
-    "superjson": "2.2.1",
-    "swagger-ui-react": "5.17.14",
+    "replace-in-file": "8.3.0",
+    "styled-components": "6.1.14",
+    "superjson": "2.2.2",
+    "swagger-ui-react": "5.18.2",
     "trpc-openapi": "1.2.0",
-    "zod": "3.23.6"
+    "zod": "3.24.1"
   },
   "devDependencies": {
-    "@bufbuild/buf": "1.30.1",
-    "@mikro-orm/cli": "6.3.13",
-    "@next/bundle-analyzer": "14.2.4",
+    "@bufbuild/buf": "1.49.0",
+    "@mikro-orm/cli": "6.4.3",
+    "@next/bundle-analyzer": "15.1.4",
     "@types/js-yaml": "4.0.9",
-    "@types/node": "20.14.8",
+    "@types/node": "22.10.6",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/styled-components": "5.1.34",
     "@types/swagger-ui-react": "4.18.3",
-    "autoprefixer": "10.4.19",
+    "autoprefixer": "10.4.20",
     "cross-env": "7.0.3",
     "css-loader": "7.1.2",
-    "husky": "9.0.11",
-    "lint-staged": "15.2.2",
-    "nextjs-node-loader": "1.1.5",
-    "rimraf": "5.0.5",
+    "husky": "9.1.7",
+    "lint-staged": "15.3.0",
+    "nextjs-node-loader": "1.1.9",
+    "rimraf": "6.0.1",
     "style-loader": "4.0.0",
-    "ts-log": "2.2.5",
+    "ts-log": "2.2.7",
     "ts-node": "10.9.2",
     "ts-proto": "1.171.0"
   },
