--- a/libs/notification/package.json
+++ b/libs/notification/package.json
@@ -15,11 +15,11 @@
   ],
   "keywords": [],
   "dependencies": {
-    "@bufbuild/protobuf": "1.8.0",
-    "@connectrpc/connect": "1.4.0",
-    "@connectrpc/connect-node": "1.4.0",
-    "@grpc/grpc-js": "1.12.2",
-    "@scow/notification-protos": "workspace:*",
-    "@scow/config": "workspace:*"
+    "@bufbuild/protobuf": "1.10.0",
+    "@connectrpc/connect": "1.6.1",
+    "@connectrpc/connect-node": "1.6.1",
+    "@grpc/grpc-js": "1.12.5",
+    "@scow/config": "workspace:*",
+    "@scow/notification-protos": "workspace:*"
   }
 }
