--- a/apps/ai/package.json
+++ b/apps/ai/package.json
@@ -34,33 +34,34 @@
     ]
   },
   "dependencies": {
-    "@ant-design/cssinjs": "1.21.0",
-    "@ant-design/colors": "7.0.2",
-    "@ant-design/icons": "5.3.7",
-    "@ddadaal/tsgrpc-client": "0.17.7",
-    "@ddadaal/tsgrpc-common": "0.2.5",
-    "@grpc/grpc-js": "1.12.2",
-    "@kubernetes/client-node": "^0.21.0",
-    "@mikro-orm/cli": "6.3.13",
-    "@mikro-orm/core": "6.3.13",
-    "@mikro-orm/migrations": "6.3.13",
-    "@mikro-orm/mysql": "6.3.13",
-    "@mikro-orm/seeder": "6.3.13",
+    "@ant-design/colors": "7.2.0",
+    "@ant-design/cssinjs": "1.22.1",
+    "@ant-design/icons": "5.5.2",
+    "@ddadaal/tsgrpc-client": "0.17.8",
+    "@ddadaal/tsgrpc-common": "0.2.6",
+    "@grpc/grpc-js": "1.12.5",
+    "@kubernetes/client-node": "^1.0.0",
+    "@mikro-orm/cli": "6.4.3",
+    "@mikro-orm/core": "6.4.3",
+    "@mikro-orm/migrations": "6.4.3",
+    "@mikro-orm/mysql": "6.4.3",
+    "@mikro-orm/seeder": "6.4.3",
+    "@monaco-editor/react": "4.6.0",
     "@scow/ai-scheduler-adapter-protos": "workspace:*",
     "@scow/config": "workspace:*",
     "@scow/lib-auth": "workspace:*",
     "@scow/lib-config": "workspace:*",
-    "@scow/protos": "workspace:*",
     "@scow/lib-decimal": "workspace:*",
     "@scow/lib-operation-log": "workspace:*",
-    "@scow/lib-scow-resource": "workspace:*",
     "@scow/lib-scheduler-adapter": "workspace:*",
+    "@scow/lib-scow-resource": "workspace:*",
     "@scow/lib-server": "workspace:*",
     "@scow/lib-ssh": "workspace:*",
     "@scow/lib-web": "workspace:*",
+    "@scow/protos": "workspace:*",
     "@scow/rich-error-model": "workspace:*",
     "@scow/utils": "workspace:*",
-    "@sinclair/typebox": "0.32.34",
+    "@sinclair/typebox": "0.34.13",
     "@tanstack/react-query": "4.36.1",
     "@trpc/client": "10.45.2",
     "@trpc/next": "10.45.2",
@@ -69,11 +70,11 @@
     "@xterm/addon-fit": "0.10.0",
     "@xterm/xterm": "5.5.0",
     "antd": "5.18.3",
-    "dayjs": "1.11.11",
-    "dotenv": "16.4.5",
+    "dayjs": "1.11.13",
+    "dotenv": "16.4.7",
     "http-proxy": "1.18.1",
     "lodash": "4.17.21",
-    "long": "5.2.3",
+    "long": "5.2.4",
     "mime-types": "2.1.35",
     "next": "14.2.4",
     "next-compose-plugins": "2.2.1",
@@ -82,50 +83,49 @@
     "node-ssh": "13.2.0",
     "nookies": "2.5.2",
     "nprogress": "0.2.0",
-    "pino": "8.16.2",
-    "protobufjs": "7.3.2",
+    "pino": "9.6.0",
+    "protobufjs": "7.4.0",
     "react": "18.3.1",
     "react-async": "10.0.1",
     "react-dom": "18.3.1",
-    "react-is": "18.3.1",
-    "react-typed-i18n": "2.4.0",
-    "replace-in-file": "8.1.0",
-    "shell-quote": "1.8.1",
+    "react-is": "19.0.0",
+    "react-typed-i18n": "2.4.1",
+    "recharts": "2.15.0",
+    "replace-in-file": "8.3.0",
+    "shell-quote": "1.8.2",
     "simstate": "3.0.1",
-    "styled-components": "6.1.11",
-    "superjson": "2.2.1",
-    "swagger-ui-react": "5.17.14",
+    "styled-components": "6.1.14",
+    "superjson": "2.2.2",
+    "swagger-ui-react": "5.18.2",
     "trpc-openapi": "1.2.0",
-    "ws": "8.17.1",
-    "zod": "3.23.8",
-    "recharts": "2.12.7",
-    "@monaco-editor/react": "4.6.0"
+    "ws": "8.18.0",
+    "zod": "3.24.1"
   },
   "devDependencies": {
-    "@next/bundle-analyzer": "14.2.4",
-    "@testing-library/jest-dom": "6.4.6",
-    "@testing-library/react": "16.0.0",
+    "@next/bundle-analyzer": "15.1.4",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.1.0",
     "@types/busboy": "1.5.4",
     "@types/google-protobuf": "3.15.12",
-    "@types/http-proxy": "1.17.14",
+    "@types/http-proxy": "1.17.15",
     "@types/mime-types": "2.1.4",
-    "@types/node": "20.14.8",
+    "@types/node": "22.10.6",
     "@types/nprogress": "0.2.3",
     "@types/react": "18.3.3",
     "@types/react-dom": "18.3.0",
     "@types/shell-quote": "1.7.5",
-    "@types/ssh2": "1.15.0",
+    "@types/ssh2": "1.15.4",
     "@types/styled-components": "5.1.34",
     "@types/swagger-ui-react": "4.18.3",
     "@types/url-join": "4.0.3",
-    "@types/ws": "8.5.10",
+    "@types/ws": "8.5.13",
     "fs-extra": "11.2.0",
     "jest-environment-jsdom": "29.7.0",
-    "nextjs-node-loader": "1.1.5",
-    "node-mocks-http": "1.15.0",
-    "postcss": "8.4.38",
-    "ts-log": "2.2.5",
-    "webpack": "5.92.1"
+    "nextjs-node-loader": "1.1.9",
+    "node-mocks-http": "1.16.2",
+    "postcss": "8.5.1",
+    "ts-log": "2.2.7",
+    "webpack": "5.97.1"
   },
   "peerDependencies": {
     "monaco-editor": "0.44.0"
