--- a/libs/protos/scowd/package.json
+++ b/libs/protos/scowd/package.json
@@ -16,10 +16,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@bufbuild/buf": "1.34.0",
-    "@bufbuild/protobuf": "1.8.0",
-    "@bufbuild/protoc-gen-es": "1.8.0",
-    "@connectrpc/connect": "^1.4.0",
-    "@connectrpc/protoc-gen-connect-es": "1.4.0"
+    "@bufbuild/buf": "1.49.0",
+    "@bufbuild/protobuf": "1.10.0",
+    "@bufbuild/protoc-gen-es": "1.10.0",
+    "@connectrpc/connect": "1.6.1",
+    "@connectrpc/protoc-gen-connect-es": "1.6.1"
   }
 }
