--- a/apps/portal-web/package.json
+++ b/apps/portal-web/package.json
@@ -78,6 +78,7 @@
     "react-typed-i18n": "2.4.1",
     "recharts": "2.15.0",
     "simstate": "3.0.1",
+    "uuid": "10.0.0",
     "styled-components": "6.1.14",
     "tslib": "2.8.1",
     "typescript": "5.7.3",
