--- a/docker/Dockerfile.docs
+++ b/docker/Dockerfile.docs
@@ -9,7 +9,7 @@
 # See the Mulan PSL v2 for more details.
 
 
-FROM ccimage.pku.edu.cn/mirror/library/node:22-alpine@sha256:5bfc86520dfe026fd04c14fa55d26bc4917e249ac67bc5c6d8b7fd12b97e2c0e AS base
+FROM ccimage.pku.edu.cn/mirror/library/node:22-alpine AS base
 
 RUN sed -i 's/dl-cdn.alpinelinux.org/mirrors.tuna.tsinghua.edu.cn/g' /etc/apk/repositories
 
@@ -51,7 +51,7 @@ COPY protos ./protos
 
 RUN pnpm build
 
-FROM ccimage.pku.edu.cn/mirror/library/nginx:alpine@sha256:2c8018e59b9ce43bd27955c844c85667409a96ecaa5180fa663cd6008ccdc663 as runner
+FROM ccimage.pku.edu.cn/mirror/library/nginx:alpine as runner
 
 COPY docs/nginx.conf /etc/nginx/templates/default.conf.template
 COPY --from=builder --chown=nginx:nginx /app/docs/build /etc/nginx/html/
