fix: 修改mis.yaml 文件里关于用户名的默认配置，不允许出现下划线_ (#199)

--- a/apps/cli/assets/init-full/config/mis.yaml
+++ b/apps/cli/assets/init-full/config/mis.yaml
@@ -47,14 +47,14 @@ createUser:
 
   # 内置创建用户界面配置
   builtin:
-    # 用户ID的格式，不设置就没有限制
+    # 用户ID的格式，不设置就没有限制，部署了AI用户ID不允许有下划线_
     userIdPattern:
       # 正则表达式
-      regex: "^[a-z][a-z0-9_]{2,19}$"
+      regex: "^[a-z][a-z0-9]{2,19}$"
 
       # 出错时的消息
       # 此文本支持国际化
-      errorMessage: "要求输入长度为3-20位，由小写字母、数字、下划线组成，且以小写字母开头的字符串"
+      errorMessage: "要求输入长度为3-20位，由小写字母、数字组成，且以小写字母开头的字符串"
 
   # 外置页面配置
   # external:
