--- a/dev/vagrant/config/mis.yaml
+++ b/dev/vagrant/config/mis.yaml
@@ -34,9 +34,9 @@ createUser:
   # 创建用户时，用户ID的规则。不设置就没有限制
   userIdPattern:
     # 正则表达式
-    regex: "^[a-zA-Z0-9_]+$"
+    regex: "^[a-zA-Z0-9]+$"
     # 出错时的消息
-    errorMessage: "只能由字母、下划线、数字组成"
+    errorMessage: "只能由字母、数字组成"
     # errorMessage:
     #   i18n:
     #     default: "只能由字母、下划线、数字组成"
