chore: 增加miracle575为第一阶段代码审核员

--- a/.github/pkuhpc-review-bot.yml
+++ b/.github/pkuhpc-review-bot.yml
@@ -1,5 +1,8 @@
 stages:
-  - name: Code
+  - name: Code1
+    reviewers: ["Miracle575"]
+
+  - name: Code2
     reviewers: ["ddadaal"]
 
   - name: E2E
